--- a/vehicle-search.html
+++ b/vehicle-search.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>People Search</title>
+    <title>Vehicle Search</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body id="container">
     <header>
-        <h1>&emsp; People Search</h1>
+        <h1>&emsp; Vehicle Search</h1>
         <nav>
             <ul class="nav-links">
                 <li><a href="index.html">People search</a>&emsp;<a href="search-vehicles.html">Vehicle search</a>&emsp;<a href="add-vehicle.html">Add a vehicle</a></li>
@@ -16,19 +16,16 @@
         </nav>
     </header>
     <main>
-        <form id="people-search-form">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name">
-            <hr color="white">
-            <label for="license">License Number:</label>
-            <input type="text" id="license" name="license">
+        <form id="vehicle-search-form">
+            <label for="rego">Vehicle Registration:</label>
+            <input type="text" id="rego" name="rego">
             <hr color="white">
             <button type="submit">Submit</button>
         </form>
         <div id="results"></div>
     </main>
     <aside>
-        <img src="people.jpg" alt="add image">
+        <img src="vehicles.jpg" alt="add image">
     </aside>
     <footer>
         <p>&copy; psylp4_comp1004_cw2</p>
