--- a/index.html
+++ b/index.html
@@ -27,11 +27,8 @@
         </form>
         <div id="results"></div>
     </main>
-    <aside>
-        <img src="people.jpg" alt="add image">
-    </aside>
     <footer>
-        <p>&copy; psylp4_comp1004_cw2</p>
+        <p>hello</p>
     </footer>
     <script src="script.js" type="module"></script>
 </body>
