--- a/add-vehicle.html
+++ b/add-vehicle.html
@@ -11,7 +11,7 @@
         <h1>&emsp; Add a Vehicle</h1>
         <nav>
             <ul class="nav-links">
-                <li><a href="index.html">People search</a>&emsp;<a href="search-vehicles.html">Vehicle search</a>&emsp;<a href="add-vehicle.html">Add a vehicle</a></li>
+                <li><a href="index.html">People search</a>&emsp;<a href="vehicle-search.html">Vehicle search</a>&emsp;<a href="add-vehicle.html">Add a vehicle</a></li>
             </ul>
         </nav>
     </header>
